[package]
authors = ["Nikolai Hellwig <info@nikolaihellwig.de>", "Sebastian Thiel <byronimo@gmail.com>"]
description = "A client to connect and query cassandra databases via tokio-cassandra"
documentation = "https://docs.rs/tokio-cassandra"
keywords = ["cassandra", "driver", "tokio", "async-io", "cli"]
license = "MIT/Apache-2.0"
name = "tokio-cassandra-cli"
repository = "https://github.com/nhellwig/tokio-cassandra"
version = "0.0.0"

[[bin]]
doc = false
name = "tcc"

[dependencies]
byteorder = "1.0.0"
clap = "2.20.3"
dns-lookup = "0.2.1"
env_logger = "0.4.0"
error-chain = "0.8"
futures = "0.1"
linefeed = "0.2.2"
log = "0.3.6"
semver = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[dependencies.isatty]
optional = true
version = "0.1"

[dependencies.syntect]
default-features = false
optional = true
version = "1.7.0"
features = ["parsing", "dump-load-rs", "dump-create-rs"]

[dependencies.tokio-cassandra]
features = ["with-serde", "with-openssl"]
path = ".."
version = "0.0"

[features]
colors = ["syntect", "isatty"]
default = ["colors"]

[lib]
name = "tcc"
